--- a/style.css
+++ b/style.css
@@ -1,8 +1,89 @@
-.title{
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0.5%;
+}
+
+.title {
     display: flex;
     justify-content: center;
 }
 
 .hidden {
     display: none;
+}
+
+.controls {
+    visibility: hidden;
+    opacity: 0.5;
+    width: 40%;
+    border-radius: 10px;
+    position: relative;
+    bottom: 10px;
+    left: 10%;
+    background-color: black;
+    box-shadow: 3px 3px 5px black;
+    transition: 1s all;
+    display: flex;
+}
+
+.player:hover .controls, .player:focus .controls{
+    opacity: 1;
+}
+
+@font-face {
+    font-family: "HeydingsControlsRular";
+    src: url("fonts/heydings_controls-webfont.eot");
+    src: url("fonts/heydings_controls-webfont.eot?#iefix") format("embedded-opentype"),
+    url("fonts/heydings_controls-webfont.woff") format("woff"),
+    url("fonts/heydings_controls-webfont.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+}
+
+button:before {
+    font-family: HeydingsControlsRegular;
+    font-size: 20px;
+    position: relative;
+    content: attr(data-icon);
+    color: #aaa;
+    text-shadow: 1px 1px 0px black;
+}
+
+.timer {
+    line-height: 38px;
+    font-size: 10px;
+    font-family: monospace;
+    text-shadow: 1px 1px 0px black;
+    color: white;
+    flex: 5;
+  }
+  
+.timer div {
+    background-color: rgba(255, 255, 255, 0.2);
+    width: 0;
+    z-index: 2;
+  }
+  
+.timer span {
+    z-index: 3;
+    left: ;
+  }
+
+.player {
+    width: 75%;
+    height: auto;
+}
+
+.videoplayer{
+    width: 100%;
+    margin: 0 auto; 
+    height: auto;
+    display: flex;
+    align-self: center;
+}
+
+body {
+    width: 100%;
+    height: auto;
 }
